felix_ontanon/session01/exercise03/rds-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: exercise-03
  labels:
    app: wpblog
    tier: database
spec:
  externalName: kubernetes-training.cfxyxg2jnovx.us-east-1.rds.amazonaws.com
  type: ExternalName
