felix_ontanon/session01/exercise03/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: exercise-03
  labels:
    app: wpblog
    tier: blog
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    tier: blog
