felix_ontanon/session01/exercise03/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: exercise-03
  labels:
    app: wpblog
  annotations:
    ingress.kubernetes.io/configuration-snippet: location ^~ /custom-admin { 
      return 301 https://wordpress-exercise-03.com/wp-admin; }
spec:
  tls:
  - hosts:
    - wordpress-exercise-03.com
    secretName: wordpress-tls
  rules:
  - host: wordpress-exercise-03.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
